--- a/style.css
+++ b/style.css
@@ -74,32 +74,33 @@ body {
 }
 
 #modelContainer {
+  position: relative;
   width: 100%;  
   height: 100%; 
-  position: relative; /* Necesario para el posicionamiento del texto */
   overflow: hidden;
 }
 
-#backgroundVideo {
+#modelContainer video {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Asegura que el video cubra todo el contenedor */
-  transform: translate(-50%, -50%);
+  object-fit: cover;
+  z-index: 1;
 }
 
 .overlayText {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); /* Centra el texto en el contenedor */
+  transform: translate(-50%, -50%);
   text-align: center;
-  color: white; /* Color del texto */
+  color: white;
   font-size: 20px;
   font-family: Arial, sans-serif;
-  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.7); /* Añade sombra al texto para mayor legibilidad */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+  z-index: 2;
 }
 
 .overlayText h2 {
@@ -110,6 +111,7 @@ body {
 .overlayText p {
   margin: 5px 0 0 0;
 }
+
 
 .uno {
   display: flex;
@@ -876,6 +878,18 @@ input:checked + label {
 
   .caja {
     border-radius: 10px;
+  }
+
+  .overlayText {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Centra el texto en el contenedor */
+    text-align: center;
+    color: white; /* Color del texto */
+    font-size: 20px;
+    font-family: Arial, sans-serif;
+    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.7); /* Añade sombra al texto para mayor legibilidad */
   }
 
   .animated-bg {
