--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ label{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    background-color: #f0f0f0;
+    background-color: #edeadc;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -170,7 +170,7 @@ label{
 }
 
 .flag {
-    width: 50px;
+    width: 65px;
     height: auto;
     transition: transform 0.5s ease;
 }
@@ -228,12 +228,34 @@ label{
   grid-row: 4;
 }
 
+.caja.diez {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(assets/habilidades1.png);
+  background-size: contain; /* Ajusta la imagen para que se vea completamente */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  background-position: center; /* Centra la imagen en la caja */
+  width: 97%;
+}
+
+.titulo2 {
+  color: black; /* Color del texto */
+  font-size: 2rem; /* Tamaño del texto, puedes ajustar según tus necesidades */
+  text-align: center; /* Centra el texto */
+  margin-bottom: 10px; /* Espacio entre el título y el contenido debajo */
+  position: relative; /* Para permitir el posicionamiento */
+  top: -75px; /* Alinea el título en la parte superior */
+  z-index: 1; /* Asegura que el título esté por encima de otros elementos */
+}
+
+
 .titulo {
   text-align: center; /* Centra el título */
-  color: white; /* Color blanco del título */
+  color: rgb(0, 0, 0); /* Color blanco del título */
   font-size: 4vw; /* Tamaño del texto del título ajustable */
   margin-bottom: 10px; /* Espacio entre el título y la caja */
-  text-shadow: 0 0 2px white, 0 0 1px white, 0 0 1px white; /* Efecto neón */
 }
 
 .once {
@@ -241,11 +263,12 @@ label{
   grid-row: 3 / 4;
   text-align: center; /* Centra el texto dentro de la caja */
   padding: 20px; /* Espaciado interno */
+  background-color: #c3b2da;
 }
 
 .once p {
   color: rgb(255, 255, 255); /* Color del párrafo */
-  text-shadow: 0 0 2px rgb(0, 0, 0), 0 0 1px rgb(0, 0, 0), 0 0 5px rgb(0, 0, 0); /* Efecto neón */
+  text-shadow: 10 0 2px rgb(0, 0, 0), 0 0 10px rgb(0, 0, 0), 0 0 15px rgb(0, 0, 0); /* Efecto neón */
   font-size: 1vw; /* Tamaño del texto del párrafo ajustable */
 }
 
@@ -634,7 +657,7 @@ label{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    background-color: #f0f0f0;
+    background-color: #cbccc5;
     padding: 0px;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -676,7 +699,7 @@ label{
 
   .titulo {
     text-align: center; /* Centra el título */
-    color: white; /* Color blanco del título */
+    color: rgb(0, 0, 0); /* Color blanco del título */
     font-size: 6vw; /* Tamaño del texto del título ajustable */
     margin-bottom: 10px; /* Espacio entre el título y la caja */
     text-shadow: 0 0 2px white, 0 0 1px white, 0 0 1px white; /* Efecto neón */
@@ -849,7 +872,7 @@ input:checked + label {
   .titulo2 {
     text-align: center;
     font-size: 8vw;
-    margin-bottom: 115px;
+    margin-bottom: 30px;
     color: #000000;
     text-shadow: 0 0 8px #ffffff;
   } 
@@ -868,6 +891,7 @@ input:checked + label {
     padding: 20px;
     margin-top: 326px;
     height: 300px;
+    background-color: #edeadc;
 }
   
   .once p {
